# seqan3-infrastructure

./: README.md  seqan-organisation.drawio
ctest/: seqan3_doc.cmake  seqan3_jenkins.cmake  seqan3_unix.cmake
ctest/seqan2/cmake/: jenkins_win.sh  seqan_unix.cmake
doxygen/: CMakeLists.txt  doc_test.py  seqan3_doxygen_cfg.in
nightlies/: README.md  seqan3_nightly.cmake  seqan3_nightly.service  seqan3_nightly.sh  seqan3_nightly.timer
nightlies/files/: nightly.sh
nightlies/files/nightly_compiler/wrapper/: g++-10-git  g++-11-git  g++-12-git  g++-git  gcc-10-git  gcc-11-git  gcc-12-git  gcc-git
nightlies/files/seqan3/: notesfile.txt  seqan3_nightly.cmake
nightlies/files/sharg/: CTestCustom.cmake  fix_skipped.cmake  notesfile.txt  sharg_nightly.cmake
package/: CMakeLists.txt  seqan3-package.cmake
